--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Awesome Website</title>
 
     <!-- attach our stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
