--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <!-- our main logo -->
         <a id="logo" href="index.html">
-            <img src="img/avatar.jpeg" alt="Logo">
+            <img src="avatar.jpeg" alt="Logo">
             <span>My Website</span>
         </a>
 
@@ -54,19 +54,19 @@
             </div>
 
             <div class="feature-box">
-                <img src="img/like.png" alt="Easy to Use">
+                <img src="like.png" alt="Easy to Use">
                 <h5>Easy to Use</h5>
                 <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
             </div>
 
             <div class="feature-box">
-                <img src="img/faces.png" alt="Fun to Use">
+                <img src="faces.png" alt="Fun to Use">
                 <h5>Fun to Use</h5>
                 <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
             </div>
 
             <div class="feature-box">
-                <img src="img/heart.png" alt="Fun to Use">
+                <img src="heart.png" alt="Fun to Use">
                 <h5>You'll Love It</h5>
                 <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
             </div>
@@ -87,7 +87,7 @@
                     Their service is by far the most influential I've ever seen.
                 </div>
                 <div class="testimonial-author">
-                    <img src="img/david.jpg" alt="David East">
+                    <img src="david.jpg" alt="David East">
                     <h5>David East</h5>
                     <span>King of Firebase</span>
                 </div>
@@ -98,7 +98,7 @@
                     Their service is by far the most influential I've ever seen.
                 </div>
                 <div class="testimonial-author">
-                    <img src="img/holly.jpg" alt="Holly Lloyd">
+                    <img src="holly.jpg" alt="Holly Lloyd">
                     <h5>Holly Lloyd</h5>
                     <span>Queen of Scotch</span>
                 </div>
@@ -109,7 +109,7 @@
                     Their service is by far the most influential I've ever seen.
                 </div>
                 <div class="testimonial-author">
-                    <img src="img/brad.jpg" alt="Brad Green">
+                    <img src="brad.jpg" alt="Brad Green">
                     <h5>Brad Green</h5>
                     <span>King of Angular</span>
                 </div>
@@ -122,7 +122,7 @@
 
     <!-- the footer -->
     <footer>
-        <img src="img/avatar.jpeg" alt="Footer Logo">
+        <img src="avatar.jpeg" alt="Footer Logo">
         <span>My Website<br>Copyright &copy; 2016-3010 </span>
     </footer>
 
